# ragkit

./: .env.example  .gitignore  EDUCATIONAL.md  README.md  main.py  pyproject.toml
src/rag/: __init__.py  config.py
src/rag/generation/: __init__.py  chain.py  prompts.py
src/rag/indexing/: __init__.py  colbert.py  embedder.py  loader.py  multi_repr.py  splitter.py  vectorstore.py
src/rag/pipeline/: __init__.py  runner.py
src/rag/query/: __init__.py  structuring.py
src/rag/retrieval/: __init__.py  base.py  decomposition.py  hyde.py  multi_query.py  rag_fusion.py  reranker.py  step_back.py
src/rag/routing/: __init__.py  logical.py  semantic.py
tests/: test_indexing.py  test_retrieval.py  test_routing.py
